# executorch_inference

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  requirements.txt
scripts/: preprocessing.py
source/: main.cpp
